conectando a tela de login com a tela de cadastro

--- a/login/index.html
+++ b/login/index.html
@@ -23,7 +23,7 @@
     <input type="password" placeholder="Senha">
     <br><br>
     <button>Enviar</button>
-    <a class="main-link" href="cadastro/cadastro">Cadastre-se</a>
+    <a class="main-link" href="cadastro/cadastro.html">Cadastre-se</a>
     
 </div>
 
