--- a/login/index.html
+++ b/login/index.html
@@ -18,9 +18,9 @@
 
 <div>
     <h1>Login</h1>
-    <input type="text" placeholder="Nome">
+    <input type="text" placeholder="Nome" required>
     <br><br>
-    <input type="password" placeholder="Senha">
+    <input type="password" placeholder="Senha" required>
     <br><br>
     <button>Enviar</button>
     <a class="main-link" href="cadastro/cadastro.html">Cadastre-se</a>
