--- a/login/index.html
+++ b/login/index.html
@@ -23,6 +23,8 @@
     <input type="password" placeholder="Senha" required>
     <br><br>
     <button>Enviar</button>
+    <p>Ainda não é cadastrado?</p>
+    
     <a class="main-link" href="cadastro/cadastro.html">Cadastre-se</a>
     
 </div>
